--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- 
 Author: Mohamed
-Assignment: Radioactive Decay Calculator
+Project: Radioactive Decay Calculator
 
 Purpose:
 Here are codes that will be used in the HTML code section
